Implement 2.2 RGB interface, viewmodel controls, custom audio and depth-tested local cosmetics
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>